# kettle

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile.test  Makefile  PIPELINES.md  PLAN.md  README.md  SECURITY.md  TRAINING.md  attestable-builds.md  deny.toml  manifest.example.json  passport.example.json  plan.md  provenance.example.json  pyproject.toml  style-guide.md  verification-manifest.example.json
.github/workflows/: test.yml
docs/: 1-attested-builds.md  2-how-it-works.md  3-provenance-standards.md  4-threat-model.md  PLANS.md
docs/superpowers/plans/: 2026-03-16-pnpm-toolchain.md  2026-03-17-pnpm-smoke-test.md
docs/superpowers/specs/: 2026-03-16-pnpm-toolchain-design.md  2026-03-17-pnpm-smoke-test-design.md
examples/: provenance_checksum.rs
examples/audit/: workload.yaml
examples/audit/workload-results/: evidence.b64  summary.json  workload-passport.json
examples/audit/workload-results/full-results/: audit_results.txt
examples/pipelines/: build-train.yml
examples/training/: README.md
examples/training/iris/: README.md  config.json  download.py
examples/training/mnist/: README.md  config.json  download.py
service/: README.md  __init__.py  app.py  build_core.py  routes.py
src/: amd.rs  attestation.rs  commands.rs  hcl.rs  lib.rs  main.rs  provenance.rs  toolchain.rs  verify.rs
src/amd/: certs.rs  kds.rs  snp_report.rs
src/attestable_builds/: __init__.py  attestation.py  build.py  cargo.py  cli.py  evidence.py  git.py  golden.py  merkle.py  passport.py  tee_runner.py  toolchain.py  utils.py  verify.py
src/attestation/: amd.rs
src/attestation/amd/: certs.rs  kds.rs  snp_report.rs
src/commands/: attest.rs  build.rs  verify.rs
src/kettle/: __init__.py  attestation.py  build.py  cli.py  client.py  core.py  git.py  logger.py  merkle.py  output.py  passport.py  passport_common.py  provenance.py  results.py  slsa.py  subprocess_utils.py  toolchain.py  training.py  training_constants.py  training_inputs.py  training_passport.py  training_tool.py  utils.py  verification.py
src/kettle/nix/: __init__.py  build.py  parser.py  passport.py  provenance.py  toolchain.py  verification.py  verifier.py
src/kettle/pipeline/: __init__.py  actions.py  context.py  executor.py  parser.py  schema.py  storage.py
src/kettle/provenance/: __init__.py  generate.py  slsa.py  verification.py
src/kettle/toolchains/: __init__.py
src/kettle/toolchains/cargo/: __init__.py  toolchain.py
src/kettle/toolchains/nix/: __init__.py  toolchain.py
src/kettle/training/: Cargo.toml  __init__.py  constants.py  dataset_utils.py  inputs.py  orchestrator.py  passport.py
src/kettle/training/candle/: Cargo.toml  __init__.py  tool.py
src/kettle/training/candle/src/: dataset.rs  main.rs  model.rs  train.rs
src/kettle/training/src/: dataset.rs  main.rs  model.rs  train.rs
src/kettle/workload/: __init__.py  executor.py  parser.py  sandbox.py  schema.py
src/toolchain/: cargo.rs  driver.rs  nix.rs  pnpm.rs  runner.rs
tests/: __init__.py  cli_integration_tests.rs  test_cargo.py  test_evidence.py  test_integration.py  test_verify.py
tests/fixtures/alejandra/: evidence.json  provenance.json
tests/fixtures/alejandra/artifacts/: alejandra
tests/fixtures/openclaw/: pnpm-lock-legacy.yaml  pnpm-lock-v9.yaml  provenance.json
tests/fixtures/ripgrep/: evidence.json  provenance.json
