[package]
name = "kettle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
bincode = "1"
clap = { version = "4.5.58", features = [
    "unicode",
    "derive",
    "suggestions",
    "error-context",
    "help",
    "usage",
    "color",
] }
der = "0.7.10"
flate2 = "1.1.9"
fs-err = "3.3.0"
memoffset = "0.9.1"
p256 = { version = "0.13.2", features = ["ecdsa"] }
p384 = { version = "0.13.1", features = ["ecdsa"] }
pem = "3.0.6"
reqwest = { version = "0.13.2", features = ["blocking"] }
rsa = { version = "0.9.10", features = ["sha2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"
serde_bytes = "0.11.19"
serde_json = "1.0.149"
sev = { git = "https://github.com/virtee/sev", version = "7.1.0", features = [
    "crypto_nossl",
    "serde",
    "snp",
], default-features = false }
sha2 = "0.10.9"
signature = "2.2.0"
thiserror = "2.0.18"
x509-cert = { version = "0.2.5", features = ["std"] }
