[package]
name = "kettle"
version = "0.1.0"
edition = "2024"

[features]
attest = ["attestation/attest"]

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
bincode = "1"
clap = { version = "4.5.58", features = [
    "unicode",
    "derive",
    "suggestions",
    "error-context",
    "help",
    "usage",
    "color",
] }
colored = "3.1.1"
der = "0.7.10"
ecdsa = { version = "0.16.9", features = [
    "sha2",
    "serde",
    "std",
    "pem",
    "signing",
    "verifying",
] }
flate2 = "1.1.9"
fs-err = "3.3.0"
hex = "0.4.3"
memoffset = "0.9.1"
p256 = { version = "0.13.2", features = ["ecdsa"] }
p384 = { version = "0.13.1", features = ["ecdsa"] }
pem = "3.0.6"
reqwest = { version = "0.13.2", features = ["blocking"] }
rsa = { version = "0.9.10", features = ["sha2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"
serde_bytes = "0.11.19"
serde_json = "1.0.149"
sev = { git = "https://github.com/virtee/sev", version = "7.1.0", features = [
    "crypto_nossl",
    "serde",
    "snp",
], default-features = false }
chrono = "0.4"
sha2 = "0.10.9"
toml = "0.8"
signature = "2.2.0"
tabled = { version = "0.20.0", features = ["ansi"] }
thiserror = "2.0.18"
x509-cert = { version = "0.2.5", features = ["std"] }
uuid = { version = "1.21.0", features = ["v4"] }
rs_merkle = "1.5.0"
attestation = { git = "https://github.com/lunal-dev/attestation-rs", branch = "feat/overhaul-attestation", version = "0.1.0" }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
