[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attestable-builds"
version = "0.1.0"
description = "Build-time verification and attestation for TEE (Trusted Execution Environment) deployments"
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
attestable-builds = "attestable_builds.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
