[package]
name = "kettle-train"
version = "0.1.0"
edition = "2021"
authors = ["Attestable Builds Contributors"]
description = "Attestable training system using Candle ML framework"

[[bin]]
name = "kettle-train"
path = "src/main.rs"

[dependencies]
# Candle ML framework - CPU only for determinism
candle-core = "0.9.1"
candle-nn = "0.9.1"

# Deterministic RNG
rand = "0.8"
rand_chacha = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false  # Keep symbols for debugging

[profile.dev]
opt-level = 0
